--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@ img{
     margin: auto;
 }
 .hero-section {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/1.jpg");
-    height: 500px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/hero.png");
+    height: 600px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,4 +32,12 @@ img{
 {
     height:200px;
     font-size:14pt;
+}
+#card{
+    height: 220px;
+    width: 320px;
+}
+#btmlogo{
+height: 150px;
+width: 150px;;
 }
