--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 
-
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&display=swap');
 *{
     box-sizing: border-box;
-    font-family:'Courier New', Courier, monospace
+  
 }
 
 img{
