--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya&family=Open+Sans:wght@300&display=swap');
 *{
     box-sizing: border-box;
   
